# gridcells

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  ChangeLog.txt  LICENSE  MANIFEST.in  README  README.rst  requirements.txt  setup.cfg.in  setup.py  setup.py.in  tox.ini
cmake/Modules/: FindPythonInterp.cmake  FindPythonLibrary.cmake
doc/: .gitignore  Doxyfile  conf.py  index.rst
doc/_static/: theme_overrides.css
doc/src/: todo.rst
doc/src/cppmodules/: index.rst
doc/src/modules/: analysis.bumps.rst  analysis.fields.rst  analysis.info.rst  analysis.registration.rst  analysis.signal.rst  analysis.spikes.rst  arena.rst  core.arena.rst  core.common.rst  fields.rst  gridsCore.rst  index.rst  plotting.fields.rst
doc/src/overview/: index.rst
example/: CMakeLists.txt  example.hpp  example.py
gridcells/: .gitignore  fields.py  fields.pyx  gridsCore.py
gridcells/analysis/: __init__.py  bumps.py  fields.py  info.py  registration.py  signal.py  spikes.py
gridcells/core/: __init__.py  arena.py  common.py
gridcells/plotting/: __init__.py  fields.py  low_level.py
gridcells/tests/: fields_ref_impl.py  test_fields.py
gridcells/tests/profiling/: Makefile  fields.cpp  gaussian.c  gaussian.h  gaussian_arma.cpp  profile_fields.py  test_armadillo.cpp
gridcells/tests/profiling/data/: spikeTimes.txt
include/: armanpy.hpp  armanpy.i  armanpy_1d.i  armanpy_2d.i  armanpy_3d.i  numpy.i
python/: setup.py
python/doc/: Makefile  conf.py  index.rst  make.bat
python/doc/modules/: fields.rst  index.rst
python/gridcells/: fields.py
src/: .gitignore  CMakeLists.txt  arena.cpp  arena.i  common.cpp  common.i  cppfields.i  fields.cpp  fields.i  gridsCore.i  signal.cpp  signal.h  signal.i  spikes.cpp  spikes.i  test_fields.cpp
src/include/: arena.hpp  common.hpp  fields.hpp  gridsCore.hpp  signal.hpp  spikes.hpp
test/: CMakeLists.txt  armanpy_test_lib.cpp  armanpy_test_lib.hpp  armanpy_test_lib.i  armanpy_test_run.py  armanpy_tests.py  dlldefines.h  dlldefines.h.in  test.cpp  test.hpp  test.i  test.py
tests/data/: pos_y.txt
tests/profiling/: .gitignore  Makefile  profile_fields.py
tests/profiling/data/: pos_x.txt
tests/unit/: base.py  fields_ref_impl.py  test_analysis_signal.py  test_analysis_spikes.py  test_bumps.py  test_common.py  test_fields.py  test_information.py  test_registration.py
tests/unit/base/: __init__.py  spikes.py
